--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "handlebars.moment": "^1.0.4",
     "hbs": "^4.2.0",
     "method-override": "^3.0.0",
+    "moment": "^2.30.1",
     "mongoose": "^7.2.2",
     "mongoose-sequence": "^6.0.1",
     "node-fetch": "^3.3.2"
