--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.18.0",
     "handlebars.moment": "^1.0.4",
     "hbs": "^4.2.0",
+    "jquery": "^3.7.1",
     "method-override": "^3.0.0",
     "moment": "^2.30.1",
     "mongoose": "^7.2.2",
