--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "handlebars": "^4.7.8",
     "handlebars.moment": "^1.0.4",
     "hbs": "^4.2.0",
     "jquery": "^3.7.1",
